issue #29 reduce code smells